# centaur_brain

./: .gitignore  LICENSE  OBSIDIAN_GEMINI.md  README.md  centaur-brain.service  deduplication_refactor_plan.md  gemini.md  karpathy_refactor.md  product_description.md  reindex_all.py  sources_all.txt  sysbrain.md
backend/: .brain_cleaner_state.json  .env.example  .gitignore  .janitor_state.json  README.md  add_book.py  brain_cleaner.py  debug_notion.py  janitor_clean.py  logger.py  main.py  pyproject.toml  rebuild_vault.py  reindex_covers.py  resume_rebuild.py
docs/: second_brain.md
extension/: background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js
